Migrate file io to java nio.