@@ -36,8 +36,9 @@ import bisq.settings.SettingsService;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -81,11 +82,11 @@ public class ResourcesController implements Controller {
     }
 
     void onOpenLogFile() {
-        PlatformUtils.open(Paths.get(baseDir, "bisq.log").toFile());
+        PlatformUtils.open(Path.of(baseDir, "bisq.log"));
     }
 
     void onOpenTorLogFile() {
-        PlatformUtils.open(Paths.get(baseDir, "tor", "debug.log").toFile());
+        PlatformUtils.open(Path.of(baseDir, "tor", "debug.log"));
     }
 
     void onOpenDataDir() {
@@ -99,7 +100,7 @@ public class ResourcesController implements Controller {
         }
         String title = Res.get("support.resources.backup.selectLocation");
         FileChooserUtil.chooseDirectory(getView().getRoot().getScene(), path, title)
-                .ifPresent(directory -> model.getBackupLocation().set(directory.getAbsolutePath()));
+                .ifPresent(directory -> model.getBackupLocation().set(directory.toAbsolutePath().toString()));
     }
 
     void onBackup() {
@@ -113,7 +114,7 @@ public class ResourcesController implements Controller {
                         String dateString = new SimpleDateFormat("yyyy-MM-dd-HHmmss").format(new Date());
                         String destinationDirName = appName + "_backup_" + dateString;
                         String destination = Paths.get(model.getBackupLocation().get(), destinationDirName).toString();
-                        if (!new File(model.getBackupLocation().get()).exists()) {
+                        if (!Files.exists(Path.of(model.getBackupLocation().get()))) {
                             new Popup().warning(Res.get("support.resources.backup.destinationNotExist", model.getBackupLocation().get())).show();
                             return;
                         }
